# intape-backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  INSTALL.md  Makefile  README.md  WHITEPAPER.md  flake.nix  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.sh
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh  settings.json.template
.docker/: entrypoint.sh  healthcheck.sh
.github/workflows/: docker-summary.md  docker-test.yml  docker.yml  test.yml
intape/: __init__.py  __main__.py  app.py  worker.py
intape/cli/: __init__.py  cli.py  run.py  worker.py
intape/core/: config.py  security.py
intape/dependencies/: __init__.py  auth.py  config.py  database.py  ipfs.py
intape/models/: __init__.py  abc.py  collection.py  file.py  token.py  user.py  video.py
intape/routes/: __init__.py
intape/schemas/: __init__.py  collection.py  fields.py  token.py  user.py  video.py
intape/security/: __init__.py
intape/utils/: auth.py  crypto.py  passwords.py
migrations/: env.py
migrations/versions/: 2022_11_15_1648-000000000000_init_users_table.py  2022_11_16_0945-b9db83e7ac00_add_usertokenmodel.py  2022_11_16_1251-4a90aa4129a8_add_c_lient_salt_field.py  2022_11_17_1413-53dce73918f0_.py  2022_11_18_1233-e931fc950542_.py  2022_11_18_1436-0c0676fd3bcb_.py  2022_11_18_1601-79a89147f5ca_.py  2022_11_28_1755-12f1a0a0d114_.py  2022_11_30_1619-e14a1a1b9b2b_.py  2022_11_30_1716-f8cee6a4cc07_.py  2022_12_01_1241-570a02c3feca_.py  2022_12_02_1234-62902f8a7670_.py
tests/: dummy.txt  fixtures.py  test_cli.py  test_config.py  test_init.py  test_ipfs.py  test_worker.py
tests/v1/: test_auth.py  test_file.py  test_ping.py  test_user.py
(+28 files in other folders)
